<?xml version="1.0"?>
<package>
  <name>autolabor_pro1_driver</name>
  <version>0.1.0</version>
  <description>The chassis_driver package</description>
  <maintainer email="shichunguo@gmail.com">Colin</maintainer>
  <license>MIT</license>
  <author>Colin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
