<?xml version="1.0"?>
<package>
  <name>delta_lidar</name>
  <version>1.0.0</version>
  <description>The delta_lidar ros package, support delta_lidar </description>

  <maintainer email="robot@3irobotics.com">3i Robotics ROS Maintainer</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>

</package>
